Finished html & css; still need to resolve text-align issue with top menu and footer.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,15 +5,26 @@ body {
 
 .bg-image {
   color: white;
-  background-image: url("./resources/images/the-flatiron-building.png")
-}
-
-.process {
-
+  background-image: url("../images/the-flatiron-building.png");
+  background-repeat: repeat-x;
 }
 
 .process-part {
 
+}
+
+nav {
+  font-size: 18px;
+}
+
+ul li {
+  list-style: none;
+  padding: .25em;
+  margin: 0;
+}
+
+nav a {
+  color: white;
 }
 
 h1, h2, h3 {
@@ -22,6 +33,8 @@ h1, h2, h3 {
 
 h1 {
   font-size: 70px;
+  padding-top: 25px;
+  margin-top: -25px;
 }
 
 h2 {
@@ -41,4 +54,16 @@ p {
   font-size: 11px;
   color: white;
   text-align: left;
+}
+
+.footer p, .footer nav, .footer ul, .footer li {
+  display: inline;
+}
+
+.footer p {
+  margin: 0 -40px 0 10px;
+}
+
+.footer li {
+  margin: -10px;
 }
